update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Recollections-The-Reminiscences-of-the-Busy-Life-of-One-Who-Has-Played-the-Varied-Parts-of-Sa__67673
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 67673-h/images/cover.jpg
 creator:
   author:
     agent_name: Bullen, Frank Thomas
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/616
     wikipedia: https://en.wikipedia.org/wiki/Frank_Thomas_Bullen
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/67673#Recollections-The-Reminiscences-of-the-Busy-Life-of-One-Who-Has-Played-the-Varied-Parts-of-Sa_
 gutenberg_issued: '2022-03-21'
 identifiers:
   gutenberg: '67673'
